scripts/nullaway/original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8.txt
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/VFrame.java:6: error: [NullAway] assigning @Nullable expression to @NonNull field
    VStack _stack = null;
           ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/VFrame.java:8: error: [NullAway] assigning @Nullable expression to @NonNull field
    VFrame _parent = null;
           ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/VFrame.java:22: error: [NullAway] assigning @Nullable expression to @NonNull field
        _parent = null;
                ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/VFrame.java:38: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/VFrame.java:51: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/VStack.java:7: error: [NullAway] initializer method does not guarantee @NonNull field link (line 6) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Node(E e) {
           ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/VStack.java:13: error: [NullAway] assigning @Nullable expression to @NonNull field
    Node<Term> now = null;
               ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/VStack.java:14: error: [NullAway] assigning @Nullable expression to @NonNull field
    Node<Term> first = null;
               ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/VStack.java:16: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        now = new Node<Term>(null);
                             ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/VStack.java:78: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        now = new Node<Term>(null);
                             ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/V.java:67: error: [NullAway] passing @Nullable parameter 'e.getMessage()' where @NonNull is required
            outln(e.getMessage());
                              ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/Cmd.java:13: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/ConsoleCharStream.java:5: error: [NullAway] assigning @Nullable expression to @NonNull field
    BufferedReader _reader = null;
                   ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/ConsoleCharStream.java:6: error: [NullAway] assigning @Nullable expression to @NonNull field
    static ConsoleCharStream _i = null;
                             ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/ConsoleCharStream.java:27: error: [NullAway] assigning @Nullable expression to @NonNull field
    Lexer _lexer = null;
          ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/Lexer.java:13: error: [NullAway] assigning @Nullable expression to @NonNull field
    public CharStream _stream = null;
                      ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/Lexer.java:234: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/QuoteStream.java:6: error: [NullAway] assigning @Nullable expression to @NonNull field
    List<Term> _terms = null;
               ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/VSynException.java:4: error: [NullAway] assigning @Nullable expression to @NonNull field
    String _err = null;
           ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/BuffCharStream.java:5: error: [NullAway] assigning @Nullable expression to @NonNull field
    BufferedReader _reader = null;
                   ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/BuffCharStream.java:11: error: [NullAway] assigning @Nullable expression to @NonNull field
    Lexer _lexer = null;
          ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/CmdQuote.java:13: error: [NullAway] assigning @Nullable expression to @NonNull field
    TokenStream _tokens = null;
                ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/LexStream.java:6: error: [NullAway] assigning @Nullable expression to @NonNull field
    CharStream _stream = null;
               ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/Prologue.java:142: error: [NullAway] dereferenced expression lastelem is @Nullable
                                        evaltmpl(tmplterm.qvalue().tokens(), lastelem.qvalue().tokens(), symbols);
                                                                                     ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/Prologue.java:145: error: [NullAway] dereferenced expression lastelem is @Nullable
                                        if (tmplterm.value().equals(lastelem.value()))
                                                                            ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/QuoteIterator.java:4: error: [NullAway] assigning @Nullable expression to @NonNull field
    QuoteStream _qs = null;
                ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/Util.java:38: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/VException.java:3: error: [NullAway] assigning @Nullable expression to @NonNull field
    Token _token = null;
          ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/VException.java:4: error: [NullAway] assigning @Nullable expression to @NonNull field
    Quote _quote = null;
          ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/VException.java:5: error: [NullAway] assigning @Nullable expression to @NonNull field
    String _err = null;
           ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/LexIterator.java:5: error: [NullAway] assigning @Nullable expression to @NonNull field
    Lexer _lex = null;
          ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/LexIterator.java:11: error: [NullAway] assigning @Nullable expression to @NonNull field
    Term _current = null;
         ^
    (see http://t.uber.com/nullaway )
../original/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/LexIterator.java:23: error: [NullAway] assigning @Nullable expression to @NonNull field
            _current = null;
                     ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
33 errors
